--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
+                <button class="button-draw" onclick="reiniciar()" aria-label="Reiniciar" id="btnReiniciar">
+                    
+                    Reiniciar
+                </button>
             </div>
         </section>
     </main>
