agrego ms correcciones y controles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
-                <button class="button-draw" onclick="reiniciar()" aria-label="Reiniciar" id="btnReiniciar">
+                <button class="button-draw" onclick="reiniciar()" aria-label="Reiniciar" id="btnReiniciar" disabled>
                     
                     Reiniciar
                 </button>
